--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-joyride",
-  "version": "2.9.3",
+  "name": "@virtality/react-joyride",
+  "version": "0.0.1",
   "description": "Create guided tours for your apps",
   "author": "Gil Barbara <gilbarbara@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gilbarbara/react-joyride.git"
+    "url": "git+https://github.com/Steliospne/react-joyride.git"
   },
   "bugs": {
     "url": "https://github.com/gilbarbara/react-joyride/issues"
@@ -78,8 +78,8 @@
     "is-ci-cli": "^2.2.0",
     "jest-extended": "^4.0.2",
     "jsdom": "^25.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "repo-tools": "^0.3.1",
     "size-limit": "^11.1.6",
     "ts-node": "^10.9.2",
