--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@virtality/react-joyride",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Create guided tours for your apps",
   "author": "Gil Barbara <gilbarbara@gmail.com>",
   "repository": {
@@ -33,8 +33,8 @@
   "sideEffects": false,
   "license": "MIT",
   "peerDependencies": {
-    "react": "15 - 18",
-    "react-dom": "15 - 18"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@gilbarbara/deep-equal": "^0.3.1",
